set(sources
    "${lib_source_dir}/builder/edged_curve_builder.cpp"
    "${lib_source_dir}/builder/geode_point_set_builder.cpp"
    "${lib_source_dir}/builder/geode_edged_curve_builder.cpp"
    "${lib_source_dir}/builder/geode_graph_builder.cpp"
    "${lib_source_dir}/builder/geode_polygonal_surface_builder.cpp"
    "${lib_source_dir}/builder/geode_polyhedral_solid_builder.cpp"
    "${lib_source_dir}/builder/geode_tetrahedral_solid_builder.cpp"
    "${lib_source_dir}/builder/geode_triangulated_surface_builder.cpp"
    "${lib_source_dir}/builder/geode_vertex_set_builder.cpp"
    "${lib_source_dir}/builder/graph_builder.cpp"
    "${lib_source_dir}/builder/point_set_builder.cpp"
    "${lib_source_dir}/builder/polygonal_surface_builder.cpp"
    "${lib_source_dir}/builder/polyhedral_solid_builder.cpp"
    "${lib_source_dir}/builder/register_builder.cpp"
    "${lib_source_dir}/builder/tetrahedral_solid_builder.cpp"
    "${lib_source_dir}/builder/triangulated_surface_builder.cpp"
    "${lib_source_dir}/builder/vertex_set_builder.cpp"
    "${lib_source_dir}/core/bitsery_archive.cpp"
    "${lib_source_dir}/core/edged_curve.cpp"
    "${lib_source_dir}/core/geode_point_set.cpp"
    "${lib_source_dir}/core/geode_edged_curve.cpp"
    "${lib_source_dir}/core/geode_graph.cpp"
    "${lib_source_dir}/core/geode_polygonal_surface.cpp"
    "${lib_source_dir}/core/geode_polyhedral_solid.cpp"
    "${lib_source_dir}/core/register_mesh.cpp"
    "${lib_source_dir}/core/geode_tetrahedral_solid.cpp"
    "${lib_source_dir}/core/geode_triangulated_surface.cpp"
    "${lib_source_dir}/core/graph.cpp"
    "${lib_source_dir}/core/point_set.cpp"
    "${lib_source_dir}/core/polygonal_surface.cpp"
    "${lib_source_dir}/core/polyhedral_solid.cpp"
    "${lib_source_dir}/core/tetrahedral_solid.cpp"
    "${lib_source_dir}/core/triangulated_surface.cpp"
    "${lib_source_dir}/core/vertex_set.cpp"
    "${lib_source_dir}/io/edged_curve_input.cpp"
    "${lib_source_dir}/io/edged_curve_output.cpp"
    "${lib_source_dir}/io/graph_input.cpp"
    "${lib_source_dir}/io/graph_output.cpp"
    "${lib_source_dir}/io/io.cpp"
    "${lib_source_dir}/io/point_set_input.cpp"
    "${lib_source_dir}/io/point_set_output.cpp"
    "${lib_source_dir}/io/polygonal_surface_input.cpp"
    "${lib_source_dir}/io/polygonal_surface_output.cpp"
    "${lib_source_dir}/io/polyhedral_solid_input.cpp"
    "${lib_source_dir}/io/polyhedral_solid_output.cpp"
    "${lib_source_dir}/io/register_input.cpp"
    "${lib_source_dir}/io/register_output.cpp"
    "${lib_source_dir}/io/tetrahedral_solid_input.cpp"
    "${lib_source_dir}/io/tetrahedral_solid_output.cpp"
    "${lib_source_dir}/io/triangulated_surface_input.cpp"
    "${lib_source_dir}/io/triangulated_surface_output.cpp"
    "${lib_source_dir}/io/vertex_set_input.cpp"
    "${lib_source_dir}/io/vertex_set_output.cpp"
)
set(public_headers
    "${lib_include_dir}/common.h"
    "${lib_include_dir}/builder/edged_curve_builder.h"
    "${lib_include_dir}/builder/geode_edged_curve_builder.h"
    "${lib_include_dir}/builder/geode_graph_builder.h"
    "${lib_include_dir}/builder/geode_point_set_builder.h"
    "${lib_include_dir}/builder/geode_polygonal_surface_builder.h"
    "${lib_include_dir}/builder/geode_polyhedral_solid_builder.h"
    "${lib_include_dir}/builder/geode_tetrahedral_solid_builder.h"
    "${lib_include_dir}/builder/geode_triangulated_surface_builder.h"
    "${lib_include_dir}/builder/geode_vertex_set_builder.h"
    "${lib_include_dir}/builder/graph_builder.h"
    "${lib_include_dir}/builder/point_set_builder.h"
    "${lib_include_dir}/builder/polygonal_surface_builder.h"
    "${lib_include_dir}/builder/polyhedral_solid_builder.h"
    "${lib_include_dir}/builder/tetrahedral_solid_builder.h"
    "${lib_include_dir}/builder/triangulated_surface_builder.h"
    "${lib_include_dir}/builder/vertex_set_builder.h"
    "${lib_include_dir}/core/bitsery_archive.h"
    "${lib_include_dir}/core/edged_curve.h"
    "${lib_include_dir}/core/geode_edged_curve.h"
    "${lib_include_dir}/core/geode_graph.h"
    "${lib_include_dir}/core/geode_point_set.h"
    "${lib_include_dir}/core/geode_polygonal_surface.h"
    "${lib_include_dir}/core/geode_polyhedral_solid.h"
    "${lib_include_dir}/core/geode_tetrahedral_solid.h"
    "${lib_include_dir}/core/geode_triangulated_surface.h"
    "${lib_include_dir}/core/geode_vertex_set.h"
    "${lib_include_dir}/core/graph.h"
    "${lib_include_dir}/core/mesh_type.h"
    "${lib_include_dir}/core/point_set.h"
    "${lib_include_dir}/core/polygonal_surface.h"
    "${lib_include_dir}/core/polyhedral_solid.h"
    "${lib_include_dir}/core/tetrahedral_solid.h"
    "${lib_include_dir}/core/triangulated_surface.h"
    "${lib_include_dir}/core/vertex_set.h"
    "${lib_include_dir}/io/edged_curve_input.h"
    "${lib_include_dir}/io/edged_curve_output.h"
    "${lib_include_dir}/io/graph_input.h"
    "${lib_include_dir}/io/graph_output.h"
    "${lib_include_dir}/io/input.h"
    "${lib_include_dir}/io/io.h"
    "${lib_include_dir}/io/output.h"
    "${lib_include_dir}/io/point_set_input.h"
    "${lib_include_dir}/io/point_set_output.h"
    "${lib_include_dir}/io/polygonal_surface_input.h"
    "${lib_include_dir}/io/polygonal_surface_output.h"
    "${lib_include_dir}/io/polyhedral_solid_input.h"
    "${lib_include_dir}/io/polyhedral_solid_output.h"
    "${lib_include_dir}/io/tetrahedral_solid_input.h"
    "${lib_include_dir}/io/tetrahedral_solid_output.h"
    "${lib_include_dir}/io/triangulated_surface_input.h"
    "${lib_include_dir}/io/triangulated_surface_output.h"
    "${lib_include_dir}/io/vertex_set_input.h"
    "${lib_include_dir}/io/vertex_set_output.h"
)
set(advanced_headers
    "${lib_include_dir}/builder/detail/register_builder.h"
    "${lib_include_dir}/core/detail/edges_impl.h"
    "${lib_include_dir}/core/detail/facet_storage.h"
    "${lib_include_dir}/core/detail/points_impl.h"
    "${lib_include_dir}/core/detail/register_mesh.h"
    "${lib_include_dir}/core/detail/vertex_cycle.h"
    "${lib_include_dir}/io/detail/geode_bitsery_mesh_input.h"
    "${lib_include_dir}/io/detail/geode_bitsery_mesh_output.h"
    "${lib_include_dir}/io/detail/geode_edged_curve_input.h"
    "${lib_include_dir}/io/detail/geode_edged_curve_output.h"
    "${lib_include_dir}/io/detail/geode_graph_input.h"
    "${lib_include_dir}/io/detail/geode_graph_output.h"
    "${lib_include_dir}/io/detail/geode_point_set_input.h"
    "${lib_include_dir}/io/detail/geode_point_set_output.h"
    "${lib_include_dir}/io/detail/geode_polygonal_surface_input.h"
    "${lib_include_dir}/io/detail/geode_polygonal_surface_output.h"
    "${lib_include_dir}/io/detail/geode_polyhedral_solid_input.h"
    "${lib_include_dir}/io/detail/geode_polyhedral_solid_output.h"
    "${lib_include_dir}/io/detail/geode_tetrahedral_solid_input.h"
    "${lib_include_dir}/io/detail/geode_tetrahedral_solid_output.h"
    "${lib_include_dir}/io/detail/geode_triangulated_surface_input.h"
    "${lib_include_dir}/io/detail/geode_triangulated_surface_output.h"
    "${lib_include_dir}/io/detail/geode_vertex_set_input.h"
    "${lib_include_dir}/io/detail/register_input.h"
    "${lib_include_dir}/io/detail/register_output.h"
)
target_link_libraries(${target_name} 
    PUBLIC 
        absl::flat_hash_map
        Bitsery::bitsery
        ${PROJECT_NAME}::basic
        ${PROJECT_NAME}::geometry
)
